4.0b2
	Report missing SPF reasons in X-Greylist (Benoit Branciard)
	Allow building objects outside of source directory (Mattheu Herrb)
	Fix configure LDFLAG generation, -R was missing (Mattheu Herrb)
	Fix MX sync on Solaris (Mattheu Herrb)
4.0b1
	Add checks against libmilter giving us NULL private structure
	Properly reset message filters when handling MAIL FROM after DATA
	Allow rcpt clause in dacl statement, as documented
	Add google pools to default greylist.conf
	Add hooks for libdmalloc
	Improve debug message (Yaroslav Boychuk)
	Improve GeoIP status report in X-Greylist (Hideki ONO)
4.0a6
	Avoid GeoIP reporting "--" for broken domain (Bernhard Schneider )
	Fix run-away string (AIDA Shinra)
	Check for libbind9 if libbind cannot be found (Fabien Tassin)
	Document ACL on TLS DN (Fabien Tassin)
	Avoid spurious exit on DATA stage ACL match for multiple recipients
4.0a5
	Don't use YY_FLUSH_BUFFER, use flush_buffer() instead (AIDA Shinra)
4.0a4
	Fix upgrade pitfal, where write access to the PID file is missing
	Back out a Debian build fix that broke other systems
4.0a3
	Add an urlcheck reply which is ignored: milterGreylistIgnore 
	Build fixes for Debian (Bernhard Schneider)
	Add a configure flag to not use --rpath (Bernhard Schneider)
	Cleanup stale PID file on startup (Bernhard Schneider)
	Fix memory leak with DNSRBL (Michael Fromme)
4.0a2
	For urlcheck answer, cope with a trailing line not terminated by CR
	Fix X-Greylist lossage (AIDA Shinra)
	Fix garbled log (Bernhard Schneider)
	Fix build on Tru64 (Attila Bruncsak)
4.0a1
	Fix again an accept-all-bug when built with SPF (AIDA Shinra)
	Fix macro handling in ACL (AIDA Shinra)
	%% syntax in format strings (AIDA Shinra)
	Clarified "%Xm" and "%Xh" semantics (AIDA Shinra)
	Fixed a memory leak at mlfi_eom (AIDA Shinra)
	Fix a bug where doing RCPT twice when blacklised succeed (AIDA Shinra)
3.1.8
	Allow filtering on the HELO string
	Back out previous SPF fix, it caused accept-all with SPF-less builds
3.1.7